e2e/input.json
{
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
        "annotations": {
            "deployment.kubernetes.io/revision": "5",
            "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"apps/v1\",\"kind\":\"Deployment\",\"metadata\":{\"annotations\":{},\"labels\":{\"addonmanager.kubernetes.io/mode\":\"Reconcile\",\"app\":\"galley\",\"chart\":\"galley\",\"heritage\":\"Tiller\",\"istio\":\"galley\",\"k8s-app\":\"istio\",\"release\":\"istio\"},\"name\":\"istio-galley\",\"namespace\":\"istio-system\"},\"spec\":{\"selector\":{\"matchLabels\":{\"istio\":\"galley\"}},\"strategy\":{\"rollingUpdate\":{\"m [...]
        },
        "creationTimestamp": "2020-12-07T23:55:45Z",
        "generation": 5,
        "labels": {
            "addonmanager.kubernetes.io/mode": "Reconcile",
            "app": "galley",
            "chart": "galley",
            "heritage": "Tiller",
            "istio": "galley",
            "k8s-app": "istio",
            "release": "istio"
        },
        "name": "istio-galley",
        "namespace": "istio-system",
        "resourceVersion": "16638852",
        "selfLink": "/apis/apps/v1/namespaces/istio-system/deployments/istio-galley",
        "uid": "fdb67017-bcfa-466b-8192-2fc3a85976a5"
    },
    "spec": {
        "progressDeadlineSeconds": 600,
        "replicas": 1,
        "revisionHistoryLimit": 10,
        "selector": {
            "matchLabels": {
                "istio": "galley"
            }
        },
        "strategy": {
            "rollingUpdate": {
                "maxSurge": "100%",
                "maxUnavailable": "25%"
            },
            "type": "RollingUpdate"
        },
        "template": {
            "metadata": {
                "annotations": {
                    "seccomp.security.alpha.kubernetes.io/pod": "docker/default",
                    "sidecar.istio.io/inject": "false"
                },
                "creationTimestamp": null,
                "labels": {
                    "app": "galley",
                    "chart": "galley",
                    "heritage": "Tiller",
                    "istio": "galley",
                    "release": "istio"
                }
            },
            "spec": {
                "affinity": {
                    "nodeAffinity": {
                        "preferredDuringSchedulingIgnoredDuringExecution": [
                            {
                                "preference": {
                                    "matchExpressions": [
                                        {
                                            "key": "beta.kubernetes.io/arch",
                                            "operator": "In",
                                            "values": [
                                                "amd64"
                                            ]
                                        }
                                    ]
                                },
                                "weight": 2
                            },
                            {
                                "preference": {
                                    "matchExpressions": [
                                        {
                                            "key": "beta.kubernetes.io/arch",
                                            "operator": "In",
                                            "values": [
                                                "ppc64le"
                                            ]
                                        }
                                    ]
                                },
                                "weight": 2
                            },
                            {
                                "preference": {
                                    "matchExpressions": [
                                        {
                                            "key": "beta.kubernetes.io/arch",
                                            "operator": "In",
                                            "values": [
                                                "s390x"
                                            ]
                                        }
                                    ]
                                },
                                "weight": 2
                            }
                        ],
                        "requiredDuringSchedulingIgnoredDuringExecution": {
                            "nodeSelectorTerms": [
                                {
                                    "matchExpressions": [
                                        {
                                            "key": "beta.kubernetes.io/arch",
                                            "operator": "In",
                                            "values": [
                                                "amd64",
                                                "ppc64le",
                                                "s390x"
                                            ]
                                        }
                                    ]
                                }
                            ]
                        }
                    }
                },
                "containers": [
                    {
                        "command": [
                            "/usr/local/bin/galley",
                            "server",
                            "--meshConfigFile=/etc/mesh-config/mesh",
                            "--livenessProbeInterval=1s",
                            "--livenessProbePath=/healthliveness",
                            "--readinessProbePath=/healthready",
                            "--readinessProbeInterval=1s",
                            "--deployment-namespace=istio-system",
                            "--insecure=true",
                            "--enable-reconcileWebhookConfiguration=true",
                            "--validation-webhook-config-file",
                            "/etc/config/validatingwebhookconfiguration.yaml",
                            "--monitoringPort=15014",
                            "--log_output_level=default:info"
                        ],
                        "image": "gke.gcr.io/istio/galley:1.4.10-gke.7",
                        "imagePullPolicy": "IfNotPresent",
                        "livenessProbe": {
                            "exec": {
                                "command": [
                                    "/usr/local/bin/galley",
                                    "probe",
                                    "--probe-path=/healthliveness",
                                    "--interval=10s"
                                ]
                            },
                            "failureThreshold": 3,
                            "initialDelaySeconds": 5,
                            "periodSeconds": 5,
                            "successThreshold": 1,
                            "timeoutSeconds": 1
                        },
                        "name": "galley",
                        "ports": [
                            {
                                "containerPort": 443,
                                "protocol": "TCP"
                            },
                            {
                                "containerPort": 15014,
                                "protocol": "TCP"
                            },
                            {
                                "containerPort": 9901,
                                "protocol": "TCP"
                            }
                        ],
                        "readinessProbe": {
                            "exec": {
                                "command": [
                                    "/usr/local/bin/galley",
                                    "probe",
                                    "--probe-path=/healthready",
                                    "--interval=10s"
                                ]
                            },
                            "failureThreshold": 3,
                            "initialDelaySeconds": 5,
                            "periodSeconds": 5,
                            "successThreshold": 1,
                            "timeoutSeconds": 1
                        },
                        "resources": {},
                        "terminationMessagePath": "/dev/termination-log",
                        "terminationMessagePolicy": "File",
                        "volumeMounts": [
                            {
                                "mountPath": "/etc/certs",
                                "name": "certs",
                                "readOnly": true
                            },
                            {
                                "mountPath": "/etc/config",
                                "name": "config",
                                "readOnly": true
                            },
                            {
                                "mountPath": "/etc/mesh-config",
                                "name": "mesh-config",
                                "readOnly": true
                            }
                        ]
                    }
                ],
                "dnsPolicy": "ClusterFirst",
                "restartPolicy": "Always",
                "schedulerName": "default-scheduler",
                "securityContext": {},
                "serviceAccount": "istio-galley-service-account",
                "serviceAccountName": "istio-galley-service-account",
                "terminationGracePeriodSeconds": 30,
                "volumes": [
                    {
                        "name": "certs",
                        "secret": {
                            "defaultMode": 420,
                            "secretName": "istio.istio-galley-service-account"
                        }
                    },
                    {
                        "configMap": {
                            "defaultMode": 420,
                            "name": "istio-galley-configuration"
                        },
                        "name": "config"
                    },
                    {
                        "configMap": {
                            "defaultMode": 420,
                            "name": "istio"
                        },
                        "name": "mesh-config"
                    }
                ]
            }
        }
    },
    "status": {
        "availableReplicas": 1,
        "conditions": [
            {
                "lastTransitionTime": "2021-01-23T01:45:29Z",
                "lastUpdateTime": "2021-01-23T01:45:29Z",
                "message": "Deployment has minimum availability.",
                "reason": "MinimumReplicasAvailable",
                "status": "True",
                "type": "Available"
            },
            {
                "lastTransitionTime": "2020-12-07T23:55:45Z",
                "lastUpdateTime": "2021-01-23T02:36:34Z",
                "message": "ReplicaSet \"istio-galley-8549848d84\" has successfully progressed.",
                "reason": "NewReplicaSetAvailable",
                "status": "True",
                "type": "Progressing"
            }
        ],
        "observedGeneration": 5,
        "readyReplicas": 1,
        "replicas": 1,
        "updatedReplicas": 1
    }
}
