e2e/output.json
{
  "apiVersion": "admissionregistration.k8s.io/v1",
  "kind": "ValidatingWebhookConfiguration",
  "metadata": {
    "creationTimestamp": "2020-12-07T23:57:07Z",
    "generation": 7,
    "labels": {
      "app": "galley",
      "chart": "galley",
      "heritage": "Tiller",
      "istio": "galley",
      "release": "istio"
    },
    "name": "istio-galley",
    "ownerReferences": [
      {
        "apiVersion": "v1",
        "blockOwnerDeletion": true,
        "controller": true,
        "kind": "Namespace",
        "name": "istio-system",
        "uid": "efe65f18-2f0d-4ea8-9d06-ab6168fbe155"
      }
    ],
    "resourceVersion": "16627037",
    "selfLink": "/apis/admissionregistration.k8s.io/v1/validatingwebhookconfigurations/istio-galley",
    "uid": "1294bcc2-6324-4d51-8229-3bf6203238ba"
  },
  "webhooks": [
    {
      "admissionReviewVersions": [
        "v1beta1"
      ],
      "clientConfig": {
        "caBundle": "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvVENDQWVXZ0F3SUJBZ0lSQUlXa3hncU9DYmVnTFIvdlZyTEpjZXN3RFFZSktvWklodmNOQVFFTEJRQXcKR0RFV01CUUdBMVVFQ2hNTlkyeDFjM1JsY2k1c2IyTmhiREFlRncweU1ERXlNRGN5TXpVMk16UmFGdzB6TURFeQpNRFV5TXpVMk16UmFNQmd4RmpBVUJnTlZCQW9URFdOc2RYTjBaWEl1Ykc5allXd3dnZ0VpTUEwR0NTcUdTSWIzCkRRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRGpPMDhuZk5xVFhxZ3BpYk9uK3plNTdpaVFsWmwzWllFQ2tYU0EKcW81V05jUGV1RHBodnlYL3ptY1UyWDdRTjdBckp4TkRNSUJkb2N4YU1aNWxpamRXYnJ3MWFjSFdaSnBFSUIyRApacmpCdGR [...]
        "service": {
          "name": "istio-galley",
          "namespace": "istio-system",
          "path": "/admitpilot",
          "port": 443
        }
      },
      "failurePolicy": "Fail",
      "matchPolicy": "Exact",
      "name": "pilot.validation.istio.io",
      "namespaceSelector": {},
      "objectSelector": {},
      "rules": [
        {
          "apiGroups": [
            "config.istio.io"
          ],
          "apiVersions": [
            "v1alpha2"
          ],
          "operations": [
            "CREATE",
            "UPDATE"
          ],
          "resources": [
            "httpapispecs",
            "httpapispecbindings",
            "quotaspecs",
            "quotaspecbindings"
          ],
          "scope": "*"
        },
        {
          "apiGroups": [
            "rbac.istio.io"
          ],
          "apiVersions": [
            "*"
          ],
          "operations": [
            "CREATE",
            "UPDATE"
          ],
          "resources": [
            "*"
          ],
          "scope": "*"
        },
        {
          "apiGroups": [
            "security.istio.io"
          ],
          "apiVersions": [
            "*"
          ],
          "operations": [
            "CREATE",
            "UPDATE"
          ],
          "resources": [
            "authorizationpolicies"
          ],
          "scope": "*"
        },
        {
          "apiGroups": [
            "authentication.istio.io"
          ],
          "apiVersions": [
            "*"
          ],
          "operations": [
            "CREATE",
            "UPDATE"
          ],
          "resources": [
            "*"
          ],
          "scope": "*"
        },
        {
          "apiGroups": [
            "networking.istio.io"
          ],
          "apiVersions": [
            "*"
          ],
          "operations": [
            "CREATE",
            "UPDATE"
          ],
          "resources": [
            "destinationrules",
            "envoyfilters",
            "gateways",
            "serviceentries",
            "sidecars",
            "virtualservices"
          ],
          "scope": "*"
        }
      ],
      "sideEffects": "None",
      "timeoutSeconds": 30
    },
    {
      "admissionReviewVersions": [
        "v1beta1"
      ],
      "clientConfig": {
        "caBundle": "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvVENDQWVXZ0F3SUJBZ0lSQUlXa3hncU9DYmVnTFIvdlZyTEpjZXN3RFFZSktvWklodmNOQVFFTEJRQXcKR0RFV01CUUdBMVVFQ2hNTlkyeDFjM1JsY2k1c2IyTmhiREFlRncweU1ERXlNRGN5TXpVMk16UmFGdzB6TURFeQpNRFV5TXpVMk16UmFNQmd4RmpBVUJnTlZCQW9URFdOc2RYTjBaWEl1Ykc5allXd3dnZ0VpTUEwR0NTcUdTSWIzCkRRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRGpPMDhuZk5xVFhxZ3BpYk9uK3plNTdpaVFsWmwzWllFQ2tYU0EKcW81V05jUGV1RHBodnlYL3ptY1UyWDdRTjdBckp4TkRNSUJkb2N4YU1aNWxpamRXYnJ3MWFjSFdaSnBFSUIyRApacmpCdGR [...]
        "service": {
          "name": "istio-galley",
          "namespace": "istio-system",
          "path": "/admitmixer",
          "port": 443
        }
      },
      "failurePolicy": "Fail",
      "matchPolicy": "Exact",
      "name": "mixer.validation.istio.io",
      "namespaceSelector": {},
      "objectSelector": {},
      "rules": [
        {
          "apiGroups": [
            "config.istio.io"
          ],
          "apiVersions": [
            "v1alpha2"
          ],
          "operations": [
            "CREATE",
            "UPDATE"
          ],
          "resources": [
            "rules",
            "attributemanifests",
            "circonuses",
            "deniers",
            "fluentds",
            "kubernetesenvs",
            "listcheckers",
            "memquotas",
            "noops",
            "opas",
            "prometheuses",
            "rbacs",
            "solarwindses",
            "stackdrivers",
            "cloudwatches",
            "dogstatsds",
            "statsds",
            "stdios",
            "apikeys",
            "authorizations",
            "checknothings",
            "listentries",
            "logentries",
            "metrics",
            "quotas",
            "reportnothings",
            "tracespans",
            "adapters",
            "handlers",
            "instances",
            "templates",
            "zipkins"
          ],
          "scope": "*"
        }
      ],
      "sideEffects": "None",
      "timeoutSeconds": 30
    }
  ]
}
